// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student should render correctly 1`] = `
<div
  className="student container column"
>
  <a
    className="list-item student-box"
    href="/profile/undefined"
  >
    <img
      className="list-item-img student-img"
      src="https://www.w3schools.com/w3css/img_fjords.jpg"
    />
    <label
      className="list-item-name student-name"
    >
      Frodo Baggins
    </label>
  </a>
</div>
`;

exports[`Student should render correctly with props 1`] = `
<div
  className="student container column"
>
  <a
    className="list-item student-box"
    href="###"
  >
    <img
      className="list-item-img student-img"
      src="https://cdn.dribbble.com/users/2973/screenshots/1331728/drbbbl_01.jpg"
    />
    <label
      className="list-item-name student-name"
    >
      Sam Sepiol
    </label>
  </a>
</div>
`;
